# project_constellation

./: .gitignore  CONTRIBUTING.md  README.md  build_ubuntu.sh  gen_certs.go  instructions.txt  patch_store.py  setup_ubuntu_build_env.sh  test_worker.go
agent/: Cargo.toml  build.rs
agent/src/: cgroup.rs  discovery.rs  executor.rs  health.rs  main.rs  metrics.rs
cli/: go.mod  main.go
cli/cmd/: dashboard.go  init.go  join.go  login.go  nodes.go  root.go  run.go  status.go
controller/: go.mod  go.sum
controller/api/: analytics.go  cluster.go  grpc_server.go  helpers.go  router.go  tasks.go  websocket.go
controller/api/middleware/: auth.go
controller/cmd/controller/: main.go
controller/discovery/: mdns.go
controller/github.com/constellation/proto/: agent.pb.go  common.pb.go  scheduler.pb.go
controller/proto/: agent.pb.go  agent_grpc.pb.go  cluster.pb.go  cluster_grpc.pb.go  common.pb.go  scheduler.pb.go  scheduler_grpc.pb.go
controller/scheduler/: placement.go  queue.go  scheduler.go  scoring.go
controller/splitter/: splitter.go
controller/state/: store.go
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/: LogViewer.tsx
dashboard/src/hooks/: useConstellation.ts
dashboard/src/pages/: Analytics.tsx  Dashboard.tsx  Login.tsx  Nodes.tsx  Tasks.tsx
deploy/: constellation-agent.service  constellation-controller.service  install.sh  install_controller.sh  install_worker.sh
proto/: agent.proto  cluster.proto  common.proto  scheduler.proto
