[package]
name = "constellation-agent"
version = "0.1.0"
edition = "2021"
description = "Constellation Node Agent — hardware discovery, task execution, health reporting"

[[bin]]
name = "constellation-agent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# System information
sysinfo = "0.35"

# HTTP client for controller API
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI args
clap = { version = "4", features = ["derive"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Hostname
hostname = "0.4"

# Time
chrono = "0.4"
tonic = "0.14.5"
prost = "0.14.4"

[build-dependencies]
tonic-build = "0.14.5"
